--- a/roles/proxmox/templates/storage_plugin.sh.j2
+++ b/roles/proxmox/templates/storage_plugin.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/bash
 temp_file=$1
-echo -e "[GLOBAL]\n\n[node:{{ inventory_hostname_short }}]\n\n[Plugin:ThinLV]\nvolume-group = {{ drbd_vg_name }}\n
+echo -e "[GLOBAL]\nloglevel = INFO\nloglevel = WARN\nloglevel = DEBUG\n\n[node:{{ inventory_hostname_short }}]\n\n[Plugin:ThinLV]\nvolume-group = {{ drbd_vg_name }}\n
 lvm-path = /sbin\npool-name = {{ drbd_lv_name}}\ndev-path = /dev/\n[Plugin:Lvm]\n
 volume-group = {{ drbd_vg_name }}\nlvm-path = /sbin\ndev-path = /dev/\n[Plugin:ThinPool]\n
 volume-group = {{ drbd_vg_name }}\n
